--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body, html{
   }
   
   .pimg1{
-    background-image:url('../Images/donate3.jpg');
+    background-image:url('https://www.google.co.in/url?sa=i&url=https%3A%2F%2Fwww.aliveinside.org%2Fdonate_now&psig=AOvVaw09EgbOcM0vFAaf22eUrGZO&ust=1629425470307000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCPDvkIqBvPICFQAAAAAdAAAAABAD');
     min-height:85%;
     background-size: cover;
   }
